--- a/Views/templates/desktop_template.html
+++ b/Views/templates/desktop_template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Views/Style/desktop_template.css">
-    <title>Document</title>
+    <title>Template</title>
 </head>
 <body>
     <header>
