--- a/Views/templates/desktop_template.html
+++ b/Views/templates/desktop_template.html
@@ -11,7 +11,7 @@
         <div class="tempHeader">
             <img class="tempJoinLogo" src="/Views/img/Capa.png" alt="">
             <div class="tempMenu">
-                <span class="tempFont">Kanban Project Management Tool</span>
+                    <a class="tempFont" href="#">Kanban Project Management Tool</a>
                 <img class="curserPointer" src="/Views/img/help.png" alt="">
                 <img class="tempUser" src="/Views/img/user.png" alt="">
             </div>
