--- a/Views/Style/contact.css
+++ b/Views/Style/contact.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     border: 0;
     color: white;
-    width: 174px;
+    width: 204px;
     height: 60px;
     font-size: 23px;
     line-height: 27.6px;
@@ -34,8 +34,22 @@
     margin-top: 32px;
     margin-bottom: 90px;
 }
+.addContactButton{
+    background-color: #4589ff;
+    padding: 16px 10px 16px 10px;
+    border-radius: 10px;
+    border: 0;
+    color: white;
+    width: 357px;
+    height: 60px;
+    font-size: 23px;
+    line-height: 27.6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
 .addContactDiv{
-
     display: flex;
     flex-direction: column;
     width: 584px;
@@ -43,6 +57,14 @@
     height: 363px;
     background-color: #305dff;
     border-radius: 12px 12px 0px 0px;
+}
+.contactsDiv{
+    width: 456px;
+    height: 928px;
+    padding: 32px 24px 32px 24px;
+}
+.contacts{
+    width: 400px;
 }
 .headlineDiv{
     display: flex;
