--- a/Views/Style/contact.css
+++ b/Views/Style/contact.css
@@ -56,7 +56,12 @@
     max-width: 584px;
     height: 363px;
     background-color: #305dff;
-    border-radius: 12px 12px 0px 0px;
+    border-radius: 30px 0px 0px 0px;
+}
+#addNewContact{
+    position: absolute;
+    left: 54%;
+    border-radius: 30px 0px 0px 30px;
 }
 .contactsDiv{
     width: 456px;
@@ -101,6 +106,7 @@
     width: 582px;
     max-width: 582px;
     border: 1px solid #D1D1D1;
+    border-radius: 0px 0px 0px 30px;
 }
 #name{
     background: url(/Views/img/person.png) no-repeat right;
@@ -138,4 +144,7 @@
     gap: 8px;
     align-items: center;
     margin-top: 48px;
+}
+.d-none{
+    display: none;
 }
